# 6EQUJ5

./: .gitignore  README.md  pyproject.toml
docs/: 6equj5.pptx  icon_ascii.txt
src/signal_6EQUJ5/: __init__.py  __main__.py  ai_engine.py  codec.py  contact.py  display.py  ehman.py  signal_language.py
src/signal_6EQUJ5/data/: icon.txt  telescope.txt
src/signal_6EQUJ5/data/civilizations/fasr_001_sagittarius/: constellation.txt  face.txt  info.txt
src/signal_6EQUJ5/data/civilizations/fasr_002_sgr_a_star/: constellation.txt  face.txt  info.txt
src/signal_6EQUJ5/data/civilizations/fasr_003_tabbys_star/: constellation.txt  face.txt  info.txt
src/signal_6EQUJ5/data/civilizations/fasr_004_orion/: constellation.txt  face.txt  info.txt
src/signal_6EQUJ5/data/civilizations/fasr_005_proxima/: constellation.txt  face.txt  info.txt
src/signal_6EQUJ5/data/civilizations/fasr_006_crab_nebula/: constellation.txt  face.txt  info.txt
src/signal_6EQUJ5/data/civilizations/fasr_007_lgm1/: constellation.txt  face.txt  info.txt
src/signal_6EQUJ5/data/civilizations/fasr_008_trappist1/: constellation.txt  face.txt  info.txt
src/signal_6EQUJ5/data/civilizations/fasr_009_oumuamua/: constellation.txt  face.txt  info.txt
src/signal_6EQUJ5/data/civilizations/fasr_010_gobekli_tepe/: constellation.txt  face.txt  info.txt
src/signal_6EQUJ5/data/civilizations/fasr_scan_h_heptapod/: constellation.txt  face.txt  info.txt
tests/: test_signal.py
tools/: img_to_ascii.py
