[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "6equj5"
version = "1977.815"
description = "..."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Big Ear Radio Observatory", email = "receiver@bigear.org" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]

[project.scripts]
6equj5 = "signal_6EQUJ5.__main__:main"

[project.optional-dependencies]
ai = ["ollama>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
signal_6EQUJ5 = ["data/*.txt"]
